Adição do novo layout WIP

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -118,7 +118,7 @@ figure img {
 /*===== header =====*/
 header{
 	min-height:82px;
-	background: url('../images/header-bg.gif') left top repeat;
+	background: url('../img/header-bg.gif') left top repeat;
 	border-bottom: 3px solid #1c1e21;
 	height: 15%;
 }
@@ -127,7 +127,7 @@ header{
 	text-indent: -5000px;
 	width: 306px;
 	height: 80px;
-	background: url('../images/eptlogo.png') left top no-repeat;
+	background: url('../img/eptlogo.png') left top no-repeat;
 	background-size: 80px 80px;
 	margin-top: 10px;
 	float: left;
@@ -164,7 +164,7 @@ nav {
 }
 /*===== content =====*/
 #content {
-	background-image: url('../images/bg-grande-levant3.jpg');
+	background-image: url('../img/bg-grande-levant3.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% 42%; 
 }
@@ -180,7 +180,7 @@ nav {
 }
 .block {
 	padding: 40px 0 50px 0;
-	background: url('../images/border-bg.gif') left bottom repeat-x;
+	background: url('../img/border-bg.gif') left bottom repeat-x;
 	//overflow: hidden;
 }
 .block-pad {
@@ -245,7 +245,7 @@ nav {
 	width:39px;
 	content: '';
 	height: 40px;
-	background: url('../images/testimonials_bg.png') left top no-repeat;
+	background: url('../img/testimonials_bg.png') left top no-repeat;
 	left: 14px;
 	top:14px;
 }
@@ -324,12 +324,12 @@ nav {
 	opacity: 0.9;
 }
 .prev {
-	background: url(../images/prev_bg.gif) left top no-repeat;
+	background: url(../img/prev_bg.gif) left top no-repeat;
 	right: 48px;
 	top: 50px;
 }
 .next {
-	background: url(../images/next_bg.gif) left top no-repeat;
+	background: url(../img/next_bg.gif) left top no-repeat;
 	right: 0;
 	top: 50px;
 }
@@ -342,7 +342,7 @@ nav {
 	margin-top: -5px;
 }
 .list li {
-	background:url('../images/li-bg.gif') left 13px no-repeat;
+	background:url('../img/li-bg.gif') left 13px no-repeat;
 	line-height: 30px;
 	padding-left: 15px;
 }
@@ -471,7 +471,7 @@ iframe {
 	display: inline-block;
 	width: 26px;
 	height: 19px;
-	background: url('../images/comment-bg.gif') left top no-repeat;
+	background: url('../img/comment-bg.gif') left top no-repeat;
 	margin: 2px 0 0 10px
 }
 /*===== footer =====*/
@@ -480,7 +480,7 @@ footer {
 	color: #9a9a9a;
 	font-weight: 300;
 	padding-top: 40px;
-	background-image: url('../images/header-bg.gif');
+	background-image: url('../img/header-bg.gif');
 }
 .social {
 	padding-left: 74px;
@@ -517,7 +517,7 @@ footer {
 }
 .menu li ul{
 	position: absolute;  
-	background-image: url('../images/header-bg.gif'); 
+	background-image: url('../img/header-bg.gif'); 
 	display: none;
 	border-radius: 5px;
 	padding: 0px 0px;
@@ -531,6 +531,10 @@ footer {
 	display: table-column; 
 	padding: 20px 10px;
 	color: black;
+}
+.menu li a:hover{
+	color: red;
+	cursor: pointer;
 }
 .menu li ul li a:hover{
 	color: red;
