--- a/app/webroot/css/camera.css
+++ b/app/webroot/css/camera.css
@@ -97,14 +97,14 @@
 	z-index: 2;
 }
 .camera_target_content .camera_link {
-    background: url(../images/blank.gif);
+    background: url(../img/blank.gif);
 	display: block;
 	height: 100%;
 	text-decoration: none;
 }
 .camera_loader {
-    background: #fff url(../images/camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
+    background: #fff url(../img/camera-loader.gif) no-repeat center;
+	background: rgba(255, 255, 255, 0.9) url(../img/camera-loader.gif) no-repeat center;
 	border: 1px solid #ffffff;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
@@ -173,7 +173,7 @@
 	z-index: 10;
 }
 .camera_prevThumbs div {
-	background: url(../images/camera_skins.png) no-repeat -160px 0;
+	background: url(../img/camera_skins.png) no-repeat -160px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -192,7 +192,7 @@
 	z-index: 10;
 }
 .camera_nextThumbs div {
-	background: url(../images/camera_skins.png) no-repeat -190px 0;
+	background: url(../img/camera_skins.png) no-repeat -190px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -293,7 +293,7 @@
 	background: none !important;
 }
 .camera_prev > span {
-	background: url(../images/prev-btn.png) left top no-repeat !important;
+	background: url(../img/prev-btn.png) left top no-repeat !important;
 	display: block;
 	height: 39px;
 	width: 39px;
@@ -303,7 +303,7 @@
 	background: none !important;
 }
 .camera_next > span {
-	background: url(../images/next-btn.png) left top no-repeat !important;
+	background: url(../img/next-btn.png) left top no-repeat !important;
 	display: block;
 	height: 39px;
 	width: 39px;
@@ -313,13 +313,13 @@
 	display: none !important;
 }
 .camera_commands > .camera_play {
-	background: url(../images/camera_skins.png) no-repeat -80px 0;
+	background: url(../img/camera_skins.png) no-repeat -80px 0;
 	height: 40px;
 	width: 40px;
 	display: none !important;
 }
 .camera_commands > .camera_stop {
-	background: url(../images/camera_skins.png) no-repeat -120px 0;
+	background: url(../img/camera_skins.png) no-repeat -120px 0;
 	display: block;
 	height: 40px;
 	width: 40px;
