--- a/app/webroot/css/estilo.css
+++ b/app/webroot/css/estilo.css
@@ -105,7 +105,7 @@
 		}
 
 		#container{
-			background-image: url(../imagens/rg22.jpg);
+			background-image: url(../img/rg22.jpg);
 			background-size: auto;
 			width: 100%;
 			height: 20%;
