--- a/app/webroot/Files ftmplt/css/style.css
+++ b/app/webroot/Files ftmplt/css/style.css
@@ -122,15 +122,15 @@ header{
 	border-bottom: 3px solid #1c1e21;
 	height: 15%;
 }
-.logo {
-	display: block;
-	text-indent: -5000px;
-	width: 306px;
+#logo{
+	width: 80px;
 	height: 80px;
-	background: url('../images/eptlogo.png') left top no-repeat;
-	background-size: 80px 80px;
-	margin-top: 10px;
 	float: left;
+	top: 3%;
+	left: 15%;
+	margin-top: 10px;
+	position: absolute;
+
 }
 #logoept{
 	width: 140px;
